Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.2.0
-
None
-
android
-
-
cf2b04f6da6fb4d6a7da924a0796bfa8fda25398
Description
Try the photosurface example on Android. It starts up at a location inside the application's data folder (but you can't see that until you hit the up arrow to go to the parent directory). Regardless where you go, you can't see any files.
This is due to having an implicit qrc:/ prefix when converting QString paths to QUrls, iff the application was packaged that way; so you are really just browsing inside the resources rather than in the filesystem. If the QML was not packaged as resources, then it works.
Attachments
Issue Links
- is required for
-
QTBUG-35562 Issues to be fixed in Qt 5.2.1
- Closed
- relates to
-
QTBUG-67932 Windows: FileDialog 'folder:' doesn't open a remote source (UNC path)
- Closed
- replaces
-
QTBUG-36095 Android: QtQuick FileDialog doesnt navigate forwards
- Closed