FileDialog: centralize URL validation in setFolder

QQuickAbstractFileDialog::setFolder() takes care of the pathological
cases so that the QML can be more straightforward.  This is an
alternate fix for QTBUG-36006 and some other navigation bugs.

Change-Id: I7b6b6c8cb31d68e3971e39842ec63118854ecd6d
Reviewed-by: Liang Qi <liang.qi@digia.com>